--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,8 +1,7 @@
 .nav_wrapper {
     width: 100%;
     height: 60px;
-
-    background-color: #303030;
+    background-color: pink;
     color: #fff;
 }
 
