--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,25 +1,25 @@
 .nav_wrapper {
-    width: 100%;
-    height: 60px;
+  width: 100%;
+  height: 60px;
 
-    background-color: #303030;
-    color: #fff;
+  background-color: #303030;
+  color: #fff;
 }
 
 .nav_container {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 
-    width: min(80%, 1000px);
-    height: 100%;
+  width: min(80%, 1000px);
+  height: 100%;
 
-    margin: 0px auto;
+  margin: 0px auto;
 
-    list-style: none;
+  list-style: none;
 }
 
-.nav_container > li:first-child {
-    font-size: 1.5rem;
-    font-weight: bold;
+.nav_container > li:nth-child(2) {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
