--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,13 +1,18 @@
 .card_wrapper {
-  width: min(100%, 500px);
+  width: min(100%, 1000px);
 
   margin: 20px auto;
   padding: 20px;
-  border-radius: 15px;
 
   box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.2);
 
   cursor: pointer;
+}
+.card_wrapper:hover {
+  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.4);
+	background-color: #44559930;
+	transition: 0.25s;
+	cursor: pointer;
 }
 
 .card_head {
