--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,11 +1,13 @@
 .card_wrapper {
-  width: min(100%, 500px);
+  font-family: "Noto Sans KR", sans-serif;
+  width: min(90%, 500px);
 
+  background-color: #E1D6CB;
   margin: 20px auto;
   padding: 20px;
   border-radius: 15px;
-
-  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.2);
+  font-weight: 200;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
 
   cursor: pointer;
 }
@@ -17,8 +19,6 @@
 .card_head > span:first-child {
   display: block;
   width: auto;
-
-  margin: 5px 0px;
 
   white-space: nowrap;
   overflow: hidden;
@@ -35,7 +35,7 @@
 .skeleton {
   position: relative;
   border-radius: 4px;
-  background-color: #e0e0e0;
+  background-color: #EDEEEA;
   overflow: hidden;
 }
 
