--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,36 +1,89 @@
 .card_wrapper {
+  transition: box-shadow 0.3s ease-out;
+
+  flex-grow: 0;
   width: min(100%, 500px);
 
-  margin: 20px auto;
-  padding: 20px;
-  border-radius: 15px;
+  margin: 10px auto;
+  padding: 24px;
+  border-radius: 10px;
 
-  box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  box-shadow: 0px 0px 30px 0px rgba(0, 4, 58, 0.05);
 
   cursor: pointer;
 }
 
-.card_head {
-  display: flex;
-  justify-content: space-between;
+.card_wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 4, 58, 0.15);
 }
-.card_head > span:first-child {
+
+p.author {
+  transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+
+  font-family: 'NanumSquareBold';
+  font-size: 14px;
+
+  color: #002e9b;
+}
+
+p.date {
+  transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+
+  font-family: 'NanumSquare';
+  font-size: 12px;
+
+  color: gray;
+}
+
+h1.title {
   display: block;
   width: auto;
 
-  margin: 5px 0px;
+  font-family: 'NanumSquareExtraBold';
+  font-size: 20px;
+  margin: 10px 10px 4px 0px;
 
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.card_head > span:last-child {
-  display: block;
-  width: 35px;
-  flex-shrink: 0;
 
-  font-size: 1rem;
+.card_wrapper:hover > h1.title {
+  background: -webkit-linear-gradient(-45deg, #ae35ff, #ff00ea);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
+
+h3.content {
+  transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+
+  display: block;
+  width: auto;
+
+  font-family: 'NanumSquareLight';
+  font-size: 14px;
+  color: gray;
+
+  margin: 0px 0px 16px 0px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+div.info_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+div.info_box > span {
+  transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+  font-family: 'NanumSquareLight';
+}
+
+
 
 .skeleton {
   position: relative;
