--- a/src/globals.css
+++ b/src/globals.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+body { 
+    background-color: #f8f8ff;
+}
+
 a {
     color: #fff;
     text-decoration: none;
@@ -15,7 +19,4 @@ a {
 
 a:visited {
     color: #fff;
-}
-
-#root {
 }
