--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,7 +1,8 @@
 .nav_wrapper {
     width: 100%;
     height: 60px;
-    background-color: pink;
+
+    background-color: #303030;
     color: #fff;
 }
 
