--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,47 +1,190 @@
 .post_wrapper {
 	width: min(100%, 900px);
+  
+	margin: 50px auto;
+	padding: 40px;
+	border-radius: 10px;
+	background-color: #ffffff;
 
-	margin: 20px auto;
-	padding: 20px;
-	border-radius: 15px;
-
-	box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 0px 30px 0px rgba(0, 4, 58, 0.05);
 }
-.post_auth {
+
+p.date {
+	transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+	margin-bottom: 20px;
+
+	font-family: 'NanumSquare';
+
+	color: gray;
+}
+
+div.info {
+	font-family: 'NanumSquareExtraBold';
+}
+
+div.info > h1 {
+	margin-bottom: 4px;
+
+	font-size: 40px;
+	
+	background: -webkit-linear-gradient(-45deg, #ae35ff, #ff00ea);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+div.info > h2 {
+	margin-bottom: 40px;
+
+	font-family: 'NanumSquareBold';
+	font-size: 20px;
+
+	color: gray;
+}
+
+div.hr {
+	width: 100%;
+	height: 1px;
+
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+p.content {
+	margin: 30px 0px 30px 0px;
+	transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+
+	font-family: 'NanumSquare';
+}
+
+div.likes {
+	transform: skew(-0.1deg); /* 글꼴 쭈글거림 완화 */
+	margin-top: 30px;
+	margin-bottom: 30px;
+
+	font-family: 'NanumSquareExtraBold';
+
 	display: flex;
-	gap: 10px;
-	align-items: end;
-	margin: 2px 0px;
-}
-.post_auth > span:first-child {
-	font-weight: bold;
-}
-.post_auth > span:last-child {
-	color: grey;
-	font-size: 14px;
-}
-.post_content {
-	margin: 30px 0px;
-	padding: 20px 0px;
-	border-top: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.post_wrapper > button {
-	font-weight: bold;
-	width: 100px;
-	padding: 5px 0px;
-	border: 0;
-	border-radius: 5px;
-	color: rgba(0, 0, 0, 0.5);
-	background-color: white;
-	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.1);
+div.footer {
+	margin-top: 30px;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
-.post_wrapper > button:hover {
-	background-color: #303030;
-	color: white;
-	transition: 0.5s;
+
+button {
+	transition: box-shadow 0.3s ease-out;
+	padding: 6px 13px 6px 13px;
+
+	border-radius: 7px;
 	cursor: pointer;
-	translate: 0 0.225em;
-	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+	box-shadow: 3px 3px 10px #00000030;
+}
+
+button.to_posts {
+	background-color: #3b3b3b;
+	color: white;
+}
+
+div.control > button {
+	background-color: #3b3b3b;
+	margin-left: 10px;
+	color: white;
+}
+
+
+
+.skeleton {
+	position: relative;
+	border-radius: 4px;
+	background-color: #e0e0e0;
+	overflow: hidden;
+}
+
+.skeleton::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: -100%;
+	height: 100%;
+	width: 100%;
+	background: linear-gradient(to right, #e0e0e0 0%, #f0f0f0 50%, #e0e0e0 100%);
+	animation: loading 1.5s infinite;
+}
+  
+@keyframes loading {
+	0% {
+		left: -100%;
+	}
+	50% {
+		left: 100%;
+	}
+	100% {
+		left: 100%;
+	}
+}
+
+div.skeleton_date {
+	margin-bottom: 20px;
+	
+	width: 300px;
+	height: 25px;
+	border-radius: 6px;
+}
+
+div.skeleton_title {
+	margin-bottom: 10px;
+	
+	width: 100%;
+	height: 45px;
+	border-radius: 6px;
+}
+
+div.skeleton_author {
+	margin-bottom: 30px;
+	
+	width: 600px;
+	height: 30px;
+	border-radius: 6px;
+}
+
+div.skeleton_id {
+	width: 100px;
+	height: 20px;
+}
+
+div.skeleton_like {
+	width: 100px;
+	height: 20px;
+}
+
+div.skeleton_content {
+	margin-bottom: 20px;
+	width: 100%;
+}
+
+div.skeleton_content > div {
+	margin-bottom: 8px;
+	border-radius: 6px;
+	height: 20px;
+}
+
+div.skeleton_content > div:nth-child(1) {
+	width: 400px;
+}
+div.skeleton_content > div:nth-child(2) {
+	width: 800px;
+}
+div.skeleton_content > div:nth-child(3) {
+	width: 500px;
+}
+div.skeleton_content > div:nth-child(4) {
+	width: 100%;
 }
