--- a/src/globals.css
+++ b/src/globals.css
@@ -7,10 +7,6 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    border: 0;
-    padding: 0;
-
     box-sizing: border-box;
 }
 
@@ -27,6 +23,6 @@ a:visited {
 }
 
 body {
-    background-color: #ededf8;
+    background-color: #efeff8;
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
